# ortege

./: Cargo.toml  README.md  build.rs
migrations/: 20240420171748_create_users_table.sql
ortege/: Cargo.toml
ortege-client/: Cargo.toml  build.rs
ortege-client/src/: account.rs  main.rs
proto/: accounts.proto
src/: accounts.rs  main.rs
