[package]
name = "ortege"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
prost = "0.12.4"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.11.0"

[build-dependencies]
anyhow = "1.0.82"
tonic-build = "0.11.0"

[workspace]
resolver = "2"
members = [
    "ortege-client"
]
